--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,461 @@
-.App {
-  text-align: center;
+.header {
+  margin: 10px 12vw;
+  width: 80vw;
+  height: 8vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.menu {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 30vw;
+}
+.menu h2 {
+  color: #506690;
+  font-weight: 400;
+  font-size: 17px;
+  text-transform: capitalize;
+}
+.logo {
+  width: 15vw;
+  text-align: left;
+}
+.button-div {
+  width: 15vw;
+  text-align: left;
+}
+.header-button {
+  background-color: #2b50c7;
+  border: 1px solid transparent;
+  border-radius: 0.375rem;
+  color: #fff;
+  cursor: pointer;
+  font-size: 17px;
+  font-weight: 500;
+  padding: 14px 12px;
+  text-transform: capitalize;
+}
+.hero-section {
+  width: 80vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 14vh 12vw;
+}
+.hero-left {
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+}
+.hero-left h1 {
+  margin-top: 8vh;
+  color: #000;
+  font-size: 45px;
+  font-weight: 300;
+  text-transform: capitalize;
+  line-height: 1.4;
+}
+.hero-left h2 {
+  margin-top: 1.5vh;
+  color: #969ab8;
+  font-size: 20px;
+  font-weight: 400;
+  text-transform: capitalize;
+  line-height: 1.6;
+}
+.landkit {
+  color: #335eea;
+}
+.main-button-div {
+  margin-top: 5vh;
+}
+.main-button {
+  margin-right: 8px;
+  padding: 17px 15px;
+}
+.light-button {
+  background-color: #e1e7fc;
+  color: #2b50c7;
+}
+.hero-right {
+  width: 45%;
+}
+.hero-image {
+  width: 35vw;
+  height: 55vh;
+  object-fit: cover;
+}
+.hero-below {
+  display: flex;
+  flex-direction: column;
+  width: 28%;
+  padding: 12px;
+  margin-right: 15px;
+  margin-top: 10px;
+}
+.icons {
+  color: blue;
+}
+.hero-below h1 {
+  margin-top: 18px;
+  color: #000;
+  font-size: 20px;
+  font-weight: 400;
+  text-transform: capitalize;
+  line-height: 1.4;
+  width: 20vw;
+  height: 7vh;
+}
+.hero-below h2 {
+  color: #969ab8;
+  font-size: 16px;
+  font-weight: 400;
+  text-transform: capitalize;
+  line-height: 1.6;
+  width: 20vw;
+  height: 20vh;
+}
+.svg-row {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 67vw;
+  margin: 0px 12vw;
+}
+.svg {
+  width: 9vw;
+  height: 9vh;
+  object-fit: cover;
+}
+.form-div-parent {
+  background-color: #f9fbfd;
+  width: 98vw;
+  margin-top: 5vh;
+  height: 100vh;
+}
+.form-div {
+  background-color: #f9fbfd;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 67vw;
+  margin: 0 12vw;
+  padding-top: 12vh;
+}
+.form-image {
+  width: 100%;
+  height: 40vh;
+  background-position: center;
+  background-size: cover;
+  transform: translatey(-4.5vh);
+}
+.form-input {
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+}
+.input_label {
+  color: #8597a3;
+  top: 20px;
+}
+.input_field {
+  border: 0;
+  padding: 0;
+  z-index: 1;
+  background-color: transparent;
+  border-bottom: 2px solid #eee;
+  margin-bottom: 1vh;
+  font: inherit;
+  font-size: 14px;
+  line-height: 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form-container {
+  z-index: 2;
+  width: 24vw;
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.form-btn {
+  margin-top: 12px;
+  width: 80%;
+  background-color: #389e80;
+}
+.form-left {
+  width: 38%;
+  height: 80vh;
+  display: flex;
+  border-radius: 22px;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
-.App-link {
-  color: #61dafb;
+.form-right {
+  width: 50%;
+}
+.form-right h1 {
+  color: #000;
+  font-size: 28px;
+  font-weight: 300;
+  line-height: 1.4;
+}
+.form-right h2 {
+  margin-top: 3vh;
+  color: #969ab8;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.6;
+}
+.tick {
+  width: 30vw;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 5vh;
+}
+.tick h3 {
+  width: 13vw;
+  margin: 10px 0px;
+  color: #42ba96;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 1.6;
+}
+.form-span {
+  color: #42ba96;
+}
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.photodiv {
+  display: flex;
+  align-items: center;
+  width: 67vw;
+  margin: 12vh 12vw;
+}
+.photodiv-left {
+  width: 50%;
+}
+.left-first h1 {
+  color: #000;
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 1.4;
+}
+.left-first h2 {
+  margin-top: 3vh;
+  color: #969ab8;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.6;
+}
+.left-secondary h1 {
+  color: #000;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.4;
+  margin-top: 3vh;
+}
+.left-secondary h2 {
+  margin-top: 1.5vh;
+  color: #969ab8;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 1.6;
+}
+.photodiv-right {
+  width: 50%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.photodiv-right img {
+  width: 40vw;
+  height: 55vh;
+  transform: perspective(800px) rotateY(-25deg) rotatex(8deg);
+}
+.last-icon {
+  margin-right: 20px;
+  color: blue;
+}
+
+@media screen and (max-width: 1024px) {
+  .menu {
+    display: none;
   }
-  to {
-    transform: rotate(360deg);
+  .hero-image {
+    width: 35vw;
+    height: 45vh;
+    object-fit: cover;
+  }
+  .hero-left h1 {
+    margin-top: 2vh;
+    color: #000;
+    font-size: 30px;
+    font-weight: 300;
+    text-transform: capitalize;
+    line-height: 1.2;
+  }
+  .hero-left h2 {
+    margin-top: 1vh;
+    color: #969ab8;
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 1.4;
+  }
+  .header-button {
+    background-color: #2b50c7;
+    border: 1px solid transparent;
+    border-radius: 0.375rem;
+    color: #fff;
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: 400;
+    padding: 7px 6px;
+    text-transform: capitalize;
+  }
+  .hero-below h1 {
+    margin-top: 13px;
+    color: #000;
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 1.2;
+    width: 20vw;
+    height: 7vh;
+  }
+  .hero-below h2 {
+    color: #969ab8;
+    font-size: 18px;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 1.2;
+    width: 20vw;
+    height: 20vh;
+  }
+  .svg {
+    width: 9vw;
+    height: 9vh;
+    object-fit: contain;
+  }
+  .form-div {
+    width: 70vw;
+    margin: 0 7vw;
+    padding-top: 8vh;
+  }
+  .form-left {
+    width: 60%;
+    height: 80vh;
+  }
+  .form-right {
+    width: 30%;
+  }
+  .form-right h1 {
+    color: #000;
+    font-size: 24px;
+    line-height: 1.2;
+  }
+  .form-right h2 {
+    margin-top: 1vh;
+    color: #969ab8;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.4;
+  }
+  .tick {
+    width: 30vw;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 5vh;
+  }
+  .tick h3 {
+    width: 13vw;
+    margin: 7px 0px;
+    color: #42ba96;
+    font-size: 19px;
+    font-weight: 400;
+    line-height: 1.6;
+  }
+  .left-first h1 {
+    font-size: 23px;
+  }
+  .left-first h2 {
+    margin-top: 3vh;
+    color: #969ab8;
+    font-size: 17px;
+  }
+  .left-secondary h1 {
+    font-size: 20px;
+    font-weight: 400;
+    margin-top: 2vh;
+  }
+  .left-secondary h2 {
+    margin-top: 1.2vh;
+    color: #969ab8;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 1.2;
+  }
+  .tick h3 {
+    font-size: 15px;
+  }
+  .photodiv-right img {
+    margin-left: 20px;
+    width: 35vw;
+    height: 55vh;
+    transform: perspective(800px) rotateY(-25deg) rotatex(8deg);
+  }
+}
+@media screen and (max-width: 769px) {
+  .hero-section {
+    width: 100%;
+    flex-direction: column;
+    flex-flow: column-reverse;
+    margin: 3vh 0;
+    justify-content: center;
+    align-items: center;
+  }
+  .hero-image {
+    width: 100%;
+    height: 45vh;
+    object-fit: contain;
+  }
+  .hero-right {
+    width: 100%;
+  }
+  .hero-left {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    align-items: center;
+  }
+  .hero-below {
+    display: none;
+  }
+  .form-div {
+    margin: 0;
+    flex-direction: column;
+    flex-flow: column-reverse;
+    width: 100%;
+    justify-content: flex-start;
+  }
+  .form-left {
+    display: none;
+  }
+  .form-right {
+    width: 80%;
+    margin: 0;
+  }
+  .photodiv {
+    display: none;
   }
 }
